--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Kumbh Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.62;
 }
 
 a {
@@ -13,4 +16,30 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+/* typography */
+
+h1 {
+  font-size: 1.75rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+h4 {
+  font-size: 0.875rem;
+  font-weight: 700;
+  line-height: 1.2;
 }
