--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -14,6 +14,19 @@
   padding-top: 2rem;
 }
 
+.toggleContainer {
+  display: flex;
+  align-items: center;
+}
+
+.sun {
+  margin-right: 1rem;
+}
+
+.moon {
+  margin-left: 1rem;
+}
+
 @media (min-width: 500px) {
   .header {
     background-image: url("/tablet/bg-pattern-header.svg");
