--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,4 +1,5 @@
 .header {
+  background-color: var(--appBg);
   background-image: url("/mobile/bg-pattern-header.svg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -29,7 +30,7 @@
 
 @media (min-width: 500px) {
   .header {
-    background-image: url("/tablet/bg-pattern-header.svg");
+    background-image: url("/desktop/bg-pattern-header.svg");
   }
 
   .logoContainer {
@@ -38,10 +39,6 @@
 }
 
 @media (min-width: 1100px) {
-  .header {
-    background-image: url("/desktop/bg-pattern-header.svg");
-  }
-
   .logoContainer {
     padding-top: 2.8125rem;
   }
