--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position: bottom left;
   /* test background pattern at size */
-  min-height: 160px;
+  height: 160px;
 }
 
 .logoContainer {
@@ -26,6 +26,16 @@
 
 .moon {
   margin-left: 1rem;
+}
+
+.inputGroup {
+  background: var(--compBg);
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  border-radius: 0.375rem;
+  max-width: 1100px;
+  margin-top: 3.125rem;
 }
 
 @media (min-width: 500px) {
