--- a/components/Container/Container.module.css
+++ b/components/Container/Container.module.css
@@ -1,11 +1,13 @@
-.container {
+.container,
+.jobContainer {
   padding: 0 1.5rem;
   margin: 0 auto;
   position: relative;
 }
 
 @media (min-width: 500px) {
-  .container {
+  .container,
+  .jobContainer {
     padding: 0 2.5rem;
   }
 }
@@ -14,5 +16,9 @@
   .container {
     padding: 0;
     max-width: 1100px;
+  }
+
+  .jobContainer {
+    max-width: 730px;
   }
 }
